# entari_plugin_webui

./: README.md  database.db  entari.yml  main.py  nekobox.ini  pdm_build.py  pyproject.toml
.github/workflows/: release.yml
bots/1192007819/: device.json
entari_plugin_webui/: __init__.py
entari_plugin_webui/backend/configs/: entari.yml
entari_plugin_webui/frontend/: index.html  runtime.json
entari_plugin_webui/frontend/assets/: CommunityView-B8y_iVJc.css  CommunityView-BwPKaaoW.js  CommunityView-DC5Grj3b.css  CommunityView-Dh1smfRs.js  ContributorsView-BUh7J1Bb.js  ContributorsView-CyzGQG3D.css  ContributorsView-D8QdXkpo.js  ControlView-C3-vkeLl.css  ControlView-D8mhKnUz.js  ControlView-DJ8_WZU8.css  ControlView-pm6NBTri.js  DocsView-BG9eGNGb.js  DocsView-BOBlpaH6.js  ExamplesIndex-B0Poxnts.css  ExamplesIndex-BcpyB7yV.js  ExamplesIndex-CUnn515N.js  InstanceManager-353lFryA.css  InstanceManager-fFK48JHc.js  InstanceManager-wvQDra-i.js  PluginManager-CEjM4gBC.css  PluginManager-CJrBbYya.js  PluginMarketView-B8L_UeuE.js  PluginMarketView-CWzJpY_M.js  PluginMarketView-LOVkVVwK.css  PluginMarketView-k3XgHblB.css  PluginView-BYPSeHyP.css  PluginView-CcLmAAe3.css  PluginView-CuRb-jtb.js  PluginView-D7j2BD5A.js  ProjectInfoView-BU1gap6L.js  ProjectInfoView-CCMlpOTl.css  ProjectInfoView-Cj87ffcu.js  SetView-BbxtM_ns.css  SetView-CPpqYcOf.js  SetView-DiybVQ9a.js  SetView-YKjTLShv.css  el-card-9u0QYif0.js  el-card-RPD74Z2k.js  el-input-number-Cib2fQjk.js  el-input-number-DPxQ_r4_.js  (+8 more)
frontend/: .env  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: runtime.config.js
frontend/src/: App.vue  main.ts
frontend/src/api/: instances.ts  plugin.ts  runtime.ts  set.ts  users.ts
frontend/src/components/layout/: AppAside.vue  AppHeader.vue  AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  counter.ts  usePluginStore.ts
frontend/src/styles/: theme.scss
frontend/src/types/: runtime.d.ts
frontend/src/utils/: request.ts
frontend/src/views/: ErrorPage.vue  IndexView.vue
frontend/src/views/about/: ContributorsView.vue  ProjectInfoView.vue
frontend/src/views/component/: TodayChart.vue
frontend/src/views/control/: ControlView.vue
frontend/src/views/instance/: InstanceManager.vue
frontend/src/views/login/: LoginView.vue
frontend/src/views/menu/: ExamplesIndex.vue
frontend/src/views/set/: SetView.vue
(+7 files in other folders)
